--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -823,24 +823,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 20c434d] 0x02-shell_redirections/4-lastlines\n",
-      " 1 file changed, 69 insertions(+), 50 deletions(-)\n",
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
+      "[main dd5bf16] 0x02-shell_redirections/4-lastlines\n",
+      " 2 files changed, 72 insertions(+), 33 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/4-global_variables\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 1.19 KiB | 1.19 MiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (5/5), 2.52 KiB | 860.00 KiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f100cd9..20c434d  main -> main\n",
+      "   20c434d..dd5bf16  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -860,7 +861,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 5. I'd prefer the first ones actually</h4>\n",
+    "<h4> 5. Local variables</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -870,79 +871,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Display the first 10 lines of `/etc/passwd`\n",
-    "\n",
-    "\n",
-    "##### Example:\n",
+    "##### Create a script that lists all local variables and environment varaibles, and functions.\n",
     "\n",
     "\n",
     "```bash\n",
-    "$ ./5-firstlines\n",
-    "##\n",
-    "# User Database\n",
-    "#\n",
-    "# Note that this file is consulted directly only when the system is running\n",
-    "# in single-user mode. At other times this information is provided by\n",
-    "# Open Directory.\n",
-    "#\n",
-    "# See the opendirectoryd(8) man page for additional information about\n",
-    "# Open Directory.\n",
-    "##\n",
-    "$\n",
+    "julien@ubuntu:/tmp/0x03$ . ./5-local_variables\n",
+    "BASH=/bin/bash\n",
+    "BASHOPTS=checkwinsize:cmdhist:complete_fullquote:expand_aliases:extglob:extquote:force_fignore:histappend:interactive_comments:progcomp:promptvars:sourcepath\n",
+    "BASH_ALIASES=()\n",
+    "BASH_ARGC=()\n",
+    "BASH_ARGV=()\n",
+    "BASH_CMDS=()\n",
+    "BASH_COMPLETION_COMPAT_DIR=/etc/bash_completion.d\n",
+    "BASH_LINENO=()\n",
+    "BASH_REMATCH=()\n",
+    "BASH_SOURCE=()\n",
+    "BASH_VERSINFO=([0]=\"4\" [1]=\"3\" [2]=\"46\" [3]=\"1\" [4]=\"release\" [5]=\"x86_64-pc-linux-gnu\")\n",
+    "BASH_VERSION='4.3.46(1)-release'\n",
+    "CLUTTER_IM_MODULE=xim\n",
+    "COLUMNS=133\n",
+    "COMPIZ_CONFIG_PROFILE=ubuntu\n",
+    "COMP_WORDBREAKS=$' \\t\\n\"\\'><=;|&(:'\n",
+    "DBUS_SESSION_BUS_ADDRESS=unix:abstract=/tmp/dbus-Fg27Lr20bq\n",
+    "DEFAULTS_PATH=/usr/share/gconf/ubuntu.default.path\n",
+    "DESKTOP_SESSION=ubuntu\n",
+    "[...]\n",
+    "julien@ubuntu:/tmp/0x03$ \n",
     "```\n",
     "\n",
     "##### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `5-firstlines`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `5-local_variables`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/5-firstlines\n"
+      "Writing 0x03-shell_variables_expansions/5-local_variables\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/5-firstlines\n",
+    "%%file 0x03-shell_variables_expansions/5-local_variables\n",
     "#!/bin/bash\n",
-    "head -n 10 /etc/passwd"
+    "declare"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root:x:0:0:root:/root:/bin/bash\n",
-      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
-      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
-      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
-      "sync:x:4:65534:sync:/bin:/bin/sync\n",
-      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
-      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
-      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
-      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
-      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n"
+      "BASH=/bin/bash\n",
+      "BASHOPTS=checkwinsize:cmdhist:complete_fullquote:extquote:force_fignore:globasciiranges:hostcomplete:interactive_comments:progcomp:promptvars:sourcepath\n",
+      "BASH_ALIASES=()\n",
+      "BASH_ARGC=()\n",
+      "BASH_ARGV=()\n",
+      "BASH_CMDS=()\n",
+      "BASH_LINENO=([0]=\"0\")\n",
+      "BASH_SOURCE=([0]=\"./0x03-shell_variables_expansions/5-local_variables\")\n",
+      "BASH_VERSINFO=([0]=\"5\" [1]=\"0\" [2]=\"17\" [3]=\"1\" [4]=\"release\" [5]=\"x86_64-pc-linux-gnu\")\n",
+      "BASH_VERSION='5.0.17(1)-release'\n",
+      "CLICOLOR=1\n",
+      "CLICOLOR_FORCE=1\n",
+      "CONDA_DEFAULT_ENV=base\n",
+      "CONDA_EXE=/home/elkomy/anaconda3/bin/conda\n",
+      "CONDA_PREFIX=/home/elkomy/anaconda3\n",
+      "CONDA_PROMPT_MODIFIER='(base) '\n",
+      "CONDA_PYTHON_EXE=/home/elkomy/anaconda3/bin/python\n",
+      "CONDA_SHLVL=1\n",
+      "DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus\n",
+      "DIRSTACK=()\n",
+      "DISPLAY=:0\n",
+      "ELECTRON_RUN_AS_NODE=1\n",
+      "EUID=1000\n",
+      "FORCE_COLOR=1\n",
+      "GIT_PAGER=cat\n",
+      "GROUPS=()\n",
+      "HOME=/home/elkomy\n",
+      "HOSTNAME=elkomy\n",
+      "HOSTTYPE=x86_64\n",
+      "IFS=$' \\t\\n'\n",
+      "LANG=C.UTF-8\n",
+      "LESSCLOSE='/usr/bin/lesspipe %s %s'\n",
+      "LESSOPEN='| /usr/bin/lesspipe %s'\n",
+      "LOGNAME=elkomy\n",
+      "LS_COLORS='rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:mi=00:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arc=01;31:*.arj=01;31:*.taz=01;31:*.lha=01;31:*.lz4=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.tzo=01;31:*.t7z=01;31:*.zip=01;31:*.z=01;31:*.dz=01;31:*.gz=01;31:*.lrz=01;31:*.lz=01;31:*.lzo=01;31:*.xz=01;31:*.zst=01;31:*.tzst=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.alz=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.cab=01;31:*.wim=01;31:*.swm=01;31:*.dwm=01;31:*.esd=01;31:*.jpg=01;35:*.jpeg=01;35:*.mjpg=01;35:*.mjpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.m4a=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.oga=00;36:*.opus=00;36:*.spx=00;36:*.xspf=00;36:'\n",
+      "MACHTYPE=x86_64-pc-linux-gnu\n",
+      "MOTD_SHOWN=update-motd\n",
+      "MPLBACKEND=module://matplotlib_inline.backend_inline\n",
+      "NAME=elkomy\n",
+      "OPTERR=1\n",
+      "OPTIND=1\n",
+      "OSTYPE=linux-gnu\n",
+      "PAGER=cat\n",
+      "PATH='/home/elkomy/anaconda3/envs/cplayground/bin:/home/elkomy/.vscode-server/bin/5c3e652f63e798a5ac2f31ffd0d863669328dc4c/bin/remote-cli:/home/elkomy/anaconda3/bin:/home/elkomy/anaconda3/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/lib/wsl/lib:/mnt/c/Program Files (x86)/Common Files/Oracle/Java/javapath:/mnt/c/GAMS/44:/mnt/c/GAMS/44/gbin:/mnt/c/WINDOWS/system32:/mnt/c/WINDOWS:/mnt/c/WINDOWS/System32/Wbem:/mnt/c/WINDOWS/System32/WindowsPowerShell/v1.0:/mnt/c/WINDOWS/System32/OpenSSH:/mnt/c/Program Files/Java/jdk-1.8/bin:/mnt/c/Program Files/Calibre2:/mnt/c/msys64/mingw64/bin:/mnt/c/ProgramData/chocolatey/bin:/mnt/c/Program Files/PowerShell/7:/mnt/c/Program Files/PowerShell/7-preview/preview:/mnt/c/Program Files/Git/cmd:/mnt/c/Users/komy2/.pyenv/pyenv-win/bin:/mnt/c/Users/komy2/.pyenv/pyenv-win/shims:/mnt/c/Users/komy2/anaconda3:/mnt/c/Users/komy2/anaconda3/Library/mingw-w64/bin:/mnt/c/Users/komy2/anaconda3/Library/usr/bin:/mnt/c/Users/komy2/anaconda3/Library/bin:/mnt/c/Users/komy2/anaconda3/Scripts:/mnt/c/Users/komy2/AppData/Local/Microsoft/WindowsApps:/mnt/c/Users/komy2/AppData/Local/Programs/Microsoft VS Code/bin:/mnt/c/msys64/usr/bin:/snap/bin:/home/elkomy/.vscode-server/bin/5c3e652f63e798a5ac2f31ffd0d863669328dc4c/bin/remote-cli:/home/elkomy/anaconda3/bin:/home/elkomy/anaconda3/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/lib/wsl/lib:/mnt/c/Program Files (x86)/Common Files/Oracle/Java/javapath:/mnt/c/GAMS/44:/mnt/c/GAMS/44/gbin:/mnt/c/WINDOWS/system32:/mnt/c/WINDOWS:/mnt/c/WINDOWS/System32/Wbem:/mnt/c/WINDOWS/System32/WindowsPowerShell/v1.0:/mnt/c/WINDOWS/System32/OpenSSH:/mnt/c/Program Files/Java/jdk-1.8/bin:/mnt/c/Program Files/Calibre2:/mnt/c/msys64/mingw64/bin:/mnt/c/ProgramData/chocolatey/bin:/mnt/c/Program Files/PowerShell/7:/mnt/c/Program Files/PowerShell/7-preview/preview:/mnt/c/Program Files/Git/cmd:/mnt/c/Users/komy2/.pyenv/pyenv-win/bin:/mnt/c/Users/komy2/.pyenv/pyenv-win/shims:/mnt/c/Users/komy2/anaconda3:/mnt/c/Users/komy2/anaconda3/Library/mingw-w64/bin:/mnt/c/Users/komy2/anaconda3/Library/usr/bin:/mnt/c/Users/komy2/anaconda3/Library/bin:/mnt/c/Users/komy2/anaconda3/Scripts:/mnt/c/Users/komy2/AppData/Local/Microsoft/WindowsApps:/mnt/c/Users/komy2/AppData/Local/Programs/Microsoft VS Code/bin:/mnt/c/msys64/usr/bin:/snap/bin'\n",
+      "PPID=57521\n",
+      "PS4='+ '\n",
+      "PULSE_SERVER=unix:/mnt/wslg/PulseServer\n",
+      "PWD=/home/elkomy/alx-system_engineering-devops\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PYDEVD_IPYTHON_COMPATIBLE_DEBUGGING=1\n",
+      "PYDEVD_USE_FRAME_EVAL=NO\n",
+      "PYTHONIOENCODING=utf-8\n",
+      "PYTHONUNBUFFERED=1\n",
+      "SHELL=/bin/bash\n",
+      "SHELLOPTS=braceexpand:hashall:interactive-comments\n",
+      "SHLVL=2\n",
+      "TERM=xterm-color\n",
+      "UID=1000\n",
+      "USER=elkomy\n",
+      "VSCODE_AMD_ENTRYPOINT=vs/workbench/api/node/extensionHostProcess\n",
+      "VSCODE_CWD='/mnt/c/Users/komy2/AppData/Local/Programs/Microsoft VS Code'\n",
+      "VSCODE_HANDLES_SIGPIPE=true\n",
+      "VSCODE_HANDLES_UNCAUGHT_ERRORS=true\n",
+      "VSCODE_IPC_HOOK_CLI=/run/user/1000/vscode-ipc-fbaec959-bd3d-40a2-af3c-04cb827617f1.sock\n",
+      "VSCODE_NLS_CONFIG='{\"locale\":\"en\",\"osLocale\":\"en\",\"availableLanguages\":{}}'\n",
+      "VSCODE_WSL_EXT_LOCATION=/mnt/c/Users/komy2/.vscode/extensions/ms-vscode-remote.remote-wsl-0.88.0\n",
+      "WAYLAND_DISPLAY=wayland-0\n",
+      "WSL2_GUI_APPS_ENABLED=1\n",
+      "WSLENV=VSCODE_WSL_EXT_LOCATION/up\n",
+      "WSL_DISTRO_NAME=Ubuntu-20.04\n",
+      "WSL_INTEROP=/run/WSL/544_interop\n",
+      "XDG_DATA_DIRS=/usr/local/share:/usr/share:/var/lib/snapd/desktop\n",
+      "XDG_RUNTIME_DIR=/run/user/1000/\n",
+      "_=./0x03-shell_variables_expansions/5-local_variables\n",
+      "_CE_CONDA=\n",
+      "_CE_M=\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/5-firstlines\n",
-    "./0x02-shell_redirections/5-firstlines"
+    "chmod u+x 0x03-shell_variables_expansions/5-local_variables\n",
+    "./0x03-shell_variables_expansions/5-local_variables"
    ]
   },
   {
@@ -971,7 +1050,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x02-shell_redirections/5-firstlines\"\n",
+    "git commit -m \"0x03-shell_variables_expansions/5-local_variables\"\n",
     "git push"
    ]
   },
